--- a/ENOMVG_HFT_2022231.Repository/ENOMVG_HFT_2022231.Repository.csproj
+++ b/ENOMVG_HFT_2022231.Repository/ENOMVG_HFT_2022231.Repository.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SchoolingDb.Models\ENOMVG_HFT_2022231.Models.csproj" />
+    <ProjectReference Include="..\ENOMVG_HFT_2022231.Models\ENOMVG_HFT_2022231.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
