--- a/ENOMVG_HFT_2022231/ENOMVG_HFT_2022231.Client.csproj
+++ b/ENOMVG_HFT_2022231/ENOMVG_HFT_2022231.Client.csproj
@@ -10,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SchoolingDb.Models\ENOMVG_HFT_2022231.Models.csproj" />
-    <ProjectReference Include="..\SchoolingDb.Repository\ENOMVG_HFT_2022231.Repository.csproj" />
+    <ProjectReference Include="..\ENOMVG_HFT_2022231.Models\ENOMVG_HFT_2022231.Models.csproj" />
+    <ProjectReference Include="..\ENOMVG_HFT_2022231.Repository\ENOMVG_HFT_2022231.Repository.csproj" />
   </ItemGroup>
 
 </Project>
