--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # User-specific files
+HFT_2021-22-2_feleves_feladat.pdf
 *.rsuser
 *.suo
 *.user
