--- a/ENOMVG_HFT_2022231.Repository/ENOMVG_HFT_2022231.Repository.csproj
+++ b/ENOMVG_HFT_2022231.Repository/ENOMVG_HFT_2022231.Repository.csproj
@@ -5,25 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="schooling.mdf" />
-    <None Remove="schooling_log.ldf" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="schooling.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="schooling_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\ENOMVG_HFT_2022231.Models\ENOMVG_HFT_2022231.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17">
