--- a/ENOMVG_HFT_2022231.Repository/ENOMVG_HFT_2022231.Repository.csproj
+++ b/ENOMVG_HFT_2022231.Repository/ENOMVG_HFT_2022231.Repository.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ENOMVG_HFT_2021222.Endpoint\ENOMVG_HFT_2021222.Endpoint.csproj" />
     <ProjectReference Include="..\ENOMVG_HFT_2022231.Models\ENOMVG_HFT_2022231.Models.csproj" />
   </ItemGroup>
 
