--- a/ENOMVG_HFT_2021222.Endpoint/ENOMVG_HFT_2022231.Endpoint.csproj
+++ b/ENOMVG_HFT_2021222.Endpoint/ENOMVG_HFT_2022231.Endpoint.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ENOMVG_HFT_2022231.Models\ENOMVG_HFT_2022231.Models.csproj" />
+    <ProjectReference Include="..\ENOMVG_HFT_2022231.Logic\ENOMVG_HFT_2022231.Logic.csproj" />
     <ProjectReference Include="..\ENOMVG_HFT_2022231.Repository\ENOMVG_HFT_2022231.Repository.csproj" />
   </ItemGroup>
 
