--- a/ENOMVG_HFT_2022231/ENOMVG_HFT_2022231.Client.csproj
+++ b/ENOMVG_HFT_2022231/ENOMVG_HFT_2022231.Client.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ENOMVG_HFT_2022231.Models\ENOMVG_HFT_2022231.Models.csproj" />
+    <ProjectReference Include="..\ENOMVG_HFT_2022231.Repository\ENOMVG_HFT_2022231.Repository.csproj" />
   </ItemGroup>
 
 </Project>
