--- a/ENOMVG_HFT_2022231/ENOMVG_HFT_2022231.Client.csproj
+++ b/ENOMVG_HFT_2022231/ENOMVG_HFT_2022231.Client.csproj
@@ -6,12 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ENOMVG_HFT_2022231.Models\ENOMVG_HFT_2022231.Models.csproj" />
-    <ProjectReference Include="..\ENOMVG_HFT_2022231.Repository\ENOMVG_HFT_2022231.Repository.csproj" />
   </ItemGroup>
 
 </Project>
